--- a/var_fwt_randomalert/package.xml
+++ b/var_fwt_randomalert/package.xml
@@ -3,10 +3,14 @@
   <name>var_fwt_randomalert</name>
   <version>0.0.0</version>
   <description>ROS2 Publisher/Processor demo package</description>
-  <maintainer email="your@email.com">Your Name</maintainer>
+  <maintainer email="gera.varga@email.com">Varga Gergő</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_python</buildtool_depend>
-  <depend>rclpy</depend>
-  <depend>std_msgs</depend>
+
+  <exec_depend>rclpy</exec_depend>
+
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 </package>
